cmake_minimum_required(VERSION 3.16)

PROJECT(mlvfs)

FILE(GLOB SOURCES dng.c index.c wav.c stripes.c cs.c amaze_demosaic_RT.c hdr.c histogram.c webgui.c resource_manager.c lj92.c gif.c patternnoise.c main.c)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

EXECUTE_PROCESS(COMMAND git describe --long --dirty --always --tags OUTPUT_VARIABLE GIT_VERSION WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
STRING(REGEX REPLACE "\n$" "" GIT_VERSION ${GIT_VERSION})

FIND_PACKAGE(OpenMP REQUIRED)
FIND_PACKAGE(FUSE REQUIRED)

ADD_COMPILE_DEFINITIONS(VERSION="${GIT_VERSION}" _FILE_OFFSET_BITS=64 FUSE_USE_VERSION=26)

if (OPENMP_FOUND)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

ADD_SUBDIRECTORY(mongoose)
ADD_SUBDIRECTORY(LZMA)
ADD_SUBDIRECTORY(slre)
ADD_SUBDIRECTORY(lj92)

SET (EXT_LIBS pthread m ${FUSE_LIBRARIES})

ADD_EXECUTABLE(mlvfs ${SOURCES})
SET_PROPERTY(TARGET mlvfs PROPERTY C_STANDARD 99)
TARGET_LINK_LIBRARIES(mlvfs mongoose lzma slre lj92 ${EXT_LIBS})

INSTALL(TARGETS mlvfs RUNTIME DESTINATION bin)
