cmake_minimum_required(VERSION 3.16)

PROJECT(mlvfs)

FILE(GLOB SOURCES dng.c index.c wav.c  webgui.c resource_manager.c gif.c main.c)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

EXECUTE_PROCESS(COMMAND git describe --long --dirty --always --tags OUTPUT_VARIABLE GIT_VERSION WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
STRING(REGEX REPLACE "\n$" "" GIT_VERSION ${GIT_VERSION})

FIND_PACKAGE(OpenMP REQUIRED)
FIND_PACKAGE(Fuse REQUIRED)
FIND_PACKAGE(IlmBase REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(LibRaw REQUIRED)

ADD_COMPILE_DEFINITIONS(VERSION="${GIT_VERSION}" _FILE_OFFSET_BITS=64 FUSE_USE_VERSION=26)

if (OPENMP_FOUND)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

ADD_SUBDIRECTORY(aces_container)
ADD_SUBDIRECTORY(aces_idt)
ADD_SUBDIRECTORY(mongoose)
ADD_SUBDIRECTORY(LZMA)
ADD_SUBDIRECTORY(slre)
ADD_SUBDIRECTORY(lj92)
ADD_SUBDIRECTORY(postprocess)
ADD_SUBDIRECTORY(dng)

MESSAGE(NOTICE "IlmBase include: ${IlmBase_INCLUDE_DIRS}")
MESSAGE(NOTICE "IlmBase libraries : ${IlmBase_LIBRARY}")

SET (EXTERNAL_LIBRARIES pthread m ${FUSE_LIBRARIES} ${IlmBase_LIBRARY} ${LibRaw_LIBRARIES})
SET (CMAKE_CXX_FLAGS_RELEASE "-O3")

ADD_EXECUTABLE(mlvfs ${SOURCES})
SET_PROPERTY(TARGET mlvfs PROPERTY C_STANDARD 99)
TARGET_INCLUDE_DIRECTORIES(mlvfs PUBLIC postprocess ${IlmBase_INCLUDE_DIRS} ${LibRaw_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(mlvfs postprocess dng mongoose lzma slre lj92 aces_idt aces_container ${EXTERNAL_LIBRARIES})

INSTALL(TARGETS mlvfs RUNTIME DESTINATION bin)
